Group Service class and Blog creation implemented
